@@ -14326,8 +14326,12 @@ cp_parser_lookup_name (cp_parser *parser, tree name,
 		       bool check_dependency,
 		       bool *ambiguous_p)
 {
+  int flags = 0;
   tree decl;
   tree object_type = parser->context->object_type;
+
+  if (!cp_parser_uncommitted_to_tentative_parse_p (parser))
+    flags |= LOOKUP_COMPLAIN;
 
   /* Assume that the lookup will be unambiguous.  */
   if (ambiguous_p)
@@ -14461,8 +14465,7 @@ cp_parser_lookup_name (cp_parser *parser, tree name,
       /* Look it up in the enclosing context, too.  */
       decl = lookup_name_real (name, tag_type != none_type, 
 			       /*nonclass=*/0,
-			       /*block_p=*/true, is_namespace,
-			       /*flags=*/0);
+			       /*block_p=*/true, is_namespace, flags);
       parser->object_scope = object_type;
       parser->qualifying_scope = NULL_TREE;
       if (object_decl)
@@ -14472,8 +14475,7 @@ cp_parser_lookup_name (cp_parser *parser, tree name,
     {
       decl = lookup_name_real (name, tag_type != none_type, 
 			       /*nonclass=*/0,
-			       /*block_p=*/true, is_namespace,
-			       /*flags=*/0);
+			       /*block_p=*/true, is_namespace, flags);
       parser->qualifying_scope = NULL_TREE;
       parser->object_scope = NULL_TREE;
     }
