@@ -1,5 +1,11 @@
 2005-08-31  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
+	PR c++/13377
+	* parser.c (cp_parser_lookup_name): Pass LOOKUP_COMPLAIN to
+	lookup_name_real on final parse.
+
+2005-08-31  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
 	PR c++/23639
 	* semantics.c (qualified_name_lookup_error): Do not complain again
 	on invalid scope.
